revert last commit since fixed alignment doesnt really allow users to click on the fold markers

--- a/main.less
+++ b/main.less
@@ -1,18 +1,15 @@
 .cm-thehogfather-codefolding {
     cursor: pointer;
-    margin-right: -8px;
 }
 
 .cm-s-default .cm-thehogfather-codefolding-collapsed {
     .cm-thehogfather-codefolding;
-   // background: url("images/triangle-down.png");
 }
 
 .cm-s-default .cm-thehogfather-codefolding-expanded {
     .cm-thehogfather-codefolding;
-   // background: url("images/triangle.png");
 }
 
 .cm-s-default div.CodeMirror-gutter {
-    min-width: 5.0em;
+    min-width: 4.0em;
 }
